<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DaftarPahlawanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pahlawan"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <SearchView
        android:id="@+id/searchViewPahlawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_hint"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_background_shape" />

    <Button
        android:id="@+id/tambahPahlawanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pahlawan_baru"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPahlawan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_pahlawan" />

    <Button
        android:id="@+id/kembaliButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

</LinearLayout>