<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPanelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_panel_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="48dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonManagePublishers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelola_akun_penerbit"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonManagePahlawanData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelola_data_pahlawan"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/buttonAdminLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:backgroundTint="@color/red"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>